--- a/scss/override/_variables.scss
+++ b/scss/override/_variables.scss
@@ -27,8 +27,52 @@ $theme-colors: (
 
 // > Dark mode
 // fusv-disable
-$enable-dark-mode: false;
+$enable-dark-mode: true;
 // fusv-enable
+
+[data-bs-theme="light"] {
+  color-scheme: light;
+  --bs-body-color: #{$gray-900};
+  --bs-body-color-rgb: #{to-rgb($gray-900)};
+  --bs-body-bg: #{$white};
+  --bs-body-bg-rgb: #{to-rgb($white)};
+  --bs-emphasis-color: #{$black};
+  --bs-emphasis-color-rgb: #{to-rgb($black)};
+  --bs-secondary-color: #{rgba($gray-900, .75)};
+  --bs-secondary-color-rgb: #{to-rgb($gray-900)};
+  --bs-secondary-bg: #{$gray-200};
+  --bs-secondary-bg-rgb: #{to-rgb($gray-200)};
+  --bs-tertiary-color: #{rgba($gray-900, .5)};
+  --bs-tertiary-color-rgb: #{to-rgb($gray-900)};
+  --bs-tertiary-bg: #{$gray-100};
+  --bs-tertiary-bg-rgb: #{to-rgb($gray-100)};
+  --bs-heading-color: #{$gray-900};
+  --bs-link-color: #{$red};
+  --bs-link-color-rgb: #{to-rgb($red)};
+  --bs-border-color: #{$gray-300};
+  --bs-border-color-translucent: #{rgba($black, .175)};
+  --bs-gray-100: #{$gray-100};
+  --bs-gray-200: #{$gray-200};
+  --bs-gray-300: #{$gray-300};
+  --bs-gray-400: #{$gray-400};
+  --bs-gray-500: #{$gray-500};
+  --bs-gray-600: #{$gray-600};
+  --bs-gray-700: #{$gray-700};
+  --bs-gray-800: #{$gray-800};
+  --bs-gray-900: #{$gray-900};
+}
+
+[data-bs-theme="dark"] {
+  --bs-gray-100: #{$gray-900};
+  --bs-gray-200: #{$gray-800};
+  --bs-gray-300: #{$gray-700};
+  --bs-gray-400: #{$gray-600};
+  --bs-gray-500: #{$gray-500};
+  --bs-gray-600: #{$gray-400};
+  --bs-gray-700: #{$gray-300};
+  --bs-gray-800: #{$gray-200};
+  --bs-gray-900: #{$gray-100};
+}
 
 /*
 * > FONTS
